18.4. Gerando a documentação da API em HTML com Swagger UI e SpringFox